fixing the recommendation tour

--- a/des-domestic.html
+++ b/des-domestic.html
@@ -238,8 +238,8 @@
                   </div>
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
-                    <div class="price">1.990.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
+                    <div class="price">4.500.000 <span>đ</span></div>
+                    <button><a href="destinations/domestic/vinh_ha_long.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
@@ -278,7 +278,7 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">4.990.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
+                    <button><a href="destinations/domestic/da_lat.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
@@ -316,8 +316,8 @@
                   </div>
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
-                    <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
+                    <div class="price">4.290.000 <span>đ</span></div>
+                    <button><a href="destinations/domestic/cao_bang_thac_ban_gioc_be_be.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
@@ -355,8 +355,8 @@
                   </div>
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
-                    <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
+                    <div class="price">5.290.000<span>đ</span></div>
+                    <button><a href="destinations/domestic/da_nang.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
@@ -395,46 +395,7 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
-                  </div>
-                </div>
-                <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
-              </div>
-              <!--Tour 8-->
-              <div class="tour-card">
-                <img src="/img/info/des_banner/catba.png" alt="Tour Cat Bà">
-                <div class="tour-info">
-                  <div>
-                    <h3>Cát Bà - Hòn Ngọc Của Miền Bắc</h3>
-                    <div class="tour-details">
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: NDCATBA-987</span>
-                      </div>
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-clock"></i></span>
-                        <span> Thời gian: 4N3D</span>
-                      </div>
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-location-dot"></i></span>
-                        <span>Khởi hành: Hà Nội</span>
-                      </div>
-                    </div>
-                    <div class="tour-dates">
-                        <span><i class="fa-solid fa-calendar"></i></span>
-                      <span>Ngày khởi hành:</span>
-                      <button class="nav-btn">←</button>
-                          <button class="date-btn">24/04</button>
-                          <button class="date-btn">30/04</button>
-                          <button class="date-btn">01/05</button>
-                          <button class="date-btn">08/05</button>
-                      <button class="nav-btn">→</button>
-                    </div>
-                  </div>
-                  <div style="text-align: left;">Giá từ:</div>
-                  <div class="tour-meta">
-                    <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
+                    <button><a href="destinations/domestic/tay_ninh.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
@@ -472,47 +433,8 @@
                   </div>
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
-                    <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
-                  </div>
-                </div>
-                <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
-              </div>
-              <!--Tour 10-->
-              <div class="tour-card">
-                <img src="/img/info/des_banner/mocchau.png" alt="Tour Mộc Châu">
-                <div class="tour-info">
-                  <div>
-                    <h3>Mộc Châu - Sơn La - Điện Biên</h3>
-                    <div class="tour-details">
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: NDMOCHAU-741</span>
-                      </div>
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-clock"></i></span>
-                        <span> Thời gian: 4N3D</span>
-                      </div>
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-location-dot"></i></span>
-                        <span>Khởi hành: Hà Nội</span>
-                      </div>
-                    </div>
-                    <div class="tour-dates">
-                        <span><i class="fa-solid fa-calendar"></i></span>
-                      <span>Ngày khởi hành:</span>
-                      <button class="nav-btn">←</button>
-                          <button class="date-btn">24/04</button>
-                          <button class="date-btn">30/04</button>
-                          <button class="date-btn">01/05</button>
-                          <button class="date-btn">08/05</button>
-                      <button class="nav-btn">→</button>
-                    </div>
-                  </div>
-                  <div style="text-align: left;">Giá từ:</div>
-                  <div class="tour-meta">
-                    <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
+                    <div class="price">3.990.000<span>đ</span></div>
+                    <button><a href="destinations/domestic/yen_bai_mu_cang_chai.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
@@ -551,14 +473,14 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
+                    <button><a href="destinations/domestic/sapa_lao_cai_ha_noi_yen_tu_ha_long.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
               </div>
               <!--Tour 12-->
               <div class="tour-card">
-                <img src="/img/info/des_banner/quangninh.png" alt="Tour Tây Ninh">
+                <img src="/img/info/des_banner/quangninh.png" alt="Tour Quảng Ninh">
                 <div class="tour-info">
                   <div>
                     <h3>Quảng Ninh - Ninh Bình - Hà Nội Vịnh Lan Hạ - Yên Tử Chùa Bái Đính</h3>
@@ -590,124 +512,7 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
-                  </div>
-                </div>
-                <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
-              </div>
-              <!--Tour 13-->
-              <div class="tour-card">
-                <img src="/img/info/des_banner/vanho.png" alt="Tour Vân Hồ">
-                <div class="tour-info">
-                  <div>
-                    <h3>Miền Bắc: Vân Hồ - Mộc Châu - Mai Châu - Nơi lan tỏa bản sắc vùng Tây Bắc</h3>
-                    <div class="tour-details">
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: NDVANHO-357</span>
-                      </div>
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-clock"></i></span>
-                        <span> Thời gian: 4N3D</span>
-                      </div>
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-location-dot"></i></span>
-                        <span>Khởi hành: Hà Nội</span>
-                      </div>
-                    </div>
-                    <div class="tour-dates">
-                        <span><i class="fa-solid fa-calendar"></i></span>
-                      <span>Ngày khởi hành:</span>
-                      <button class="nav-btn">←</button>
-                          <button class="date-btn">24/04</button>
-                          <button class="date-btn">30/04</button>
-                          <button class="date-btn">01/05</button>
-                          <button class="date-btn">08/05</button>
-                      <button class="nav-btn">→</button>
-                    </div>
-                  </div>
-                  <div style="text-align: left;">Giá từ:</div>
-                  <div class="tour-meta">
-                    <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
-                  </div>
-                </div>
-                <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
-              </div>
-              <!--Tour 14-->
-              <div class="tour-card">
-                <img src="/img/info/des_banner/vecsai.png" alt="Tour Tây Bắc">
-                <div class="tour-info">
-                  <div>
-                    <h3>Đaị Lễ Vesak 2025| Chùa Tam Chúc - Địa Tạng Phi Lai Tự - Bái Đính - Tràng An</h3>
-                    <div class="tour-details">
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: NDVESAK-258</span>
-                      </div>
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-clock"></i></span>
-                        <span> Thời gian: 4N3D</span>
-                      </div>
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-location-dot"></i></span>
-                        <span>Khởi hành: Hà Nội</span>
-                      </div>
-                    </div>
-                    <div class="tour-dates">
-                        <span><i class="fa-solid fa-calendar"></i></span>
-                      <span>Ngày khởi hành:</span>
-                      <button class="nav-btn">←</button>
-                          <button class="date-btn">24/04</button>
-                          <button class="date-btn">30/04</button>
-                          <button class="date-btn">01/05</button>
-                          <button class="date-btn">08/05</button>
-                      <button class="nav-btn">→</button>
-                    </div>
-                  </div>
-                  <div style="text-align: left;">Giá từ:</div>
-                  <div class="tour-meta">
-                    <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
-                  </div>
-                </div>
-                <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
-              </div>
-              <!--Tour 15-->
-              <div class="tour-card">
-                <img src="/img/info/des_banner/nongtruongche.png" alt="Tour Tây Ninh">
-                <div class="tour-info">
-                  <div>
-                    <h3>Nông trường chè - Vườn hồng Mộc Châu - Rừng thông Bản Áng - Trang trại bò sữa Dairy Farm</h3>
-                    <div class="tour-details">
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: NDMOCHAU-753</span>
-                      </div>
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-clock"></i></span>
-                        <span> Thời gian: 4N3D</span>
-                      </div>
-                      <div class="detail-item">
-                        <span><i class="fa-solid fa-location-dot"></i></span>
-                        <span>Khởi hành: Hà Nội</span>
-                      </div>
-                    </div>
-                    <div class="tour-dates">
-                        <span><i class="fa-solid fa-calendar"></i></span>
-                      <span>Ngày khởi hành:</span>
-                      <button class="nav-btn">←</button>
-                          <button class="date-btn">24/04</button>
-                          <button class="date-btn">30/04</button>
-                          <button class="date-btn">01/05</button>
-                          <button class="date-btn">08/05</button>
-                      <button class="nav-btn">→</button>
-                    </div>
-                  </div>
-                  <div style="text-align: left;">Giá từ:</div>
-                  <div class="tour-meta">
-                    <div class="price">3.990.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
+                    <button><a href="destinations/domestic/quang_ninh.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
