--- a/destinations/domestic/vinh_ha_long.html
+++ b/destinations/domestic/vinh_ha_long.html
@@ -23,37 +23,53 @@
     <title>Vịnh Hạ Long</title>
     <link rel="stylesheet" href="/css/info.css">
     <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Chi tiết</title>
 </head>
 <body>
     <header>
-        <!--Navigation bar-->
-        <div>
-            <img class="logo" src="/img/logo.svg" alt="logo">
-        </div>
+        <div><img class="logo" src="/img/logo.svg" alt="logo" /></div>
         <div class="menu-toggle" id="menu-toggle">
-            <i class="fa fa-bars"></i>
+          <i class="fa fa-bars"></i>
         </div>
         <nav id="navbar">
-            <ul class="nav_links">
-                <li><a href="/destination.html">Điểm đến</a>
-                    <div class="sub_menu">
-                        <ul>
-                            <li><a href="/des-domestic.html">Du lịch trong nước</a></li>
-                        </ul>
+          <ul class="nav_links">
+            <li><a href="/about.html">Giới thiệu</a></li>
+            <li>
+              <a href="/destination.html">Điểm đến</a>
+              <div class="sub_menu">
+                <ul>
+                  <li><a href="/des-domestic.html">Du lịch trong nước</a>
+                    <div class="sub_menu_2">
+                      <ul>
+                        <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+                        <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+                        <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
+                      </ul>
                     </div>
-                </li>
-                <li><a href="/about.html">Giới thiệu</a></li>
-                <li><a href="/contact.html">Liên hệ</a></li>
-                <li><a href="/news.html">Tin tức</a></li>
-            </ul>
+                  </li>
+                  <li><a href="/des-oversea.html">Du lịch nước ngoài</a>
+                    <div class="sub_menu_2">
+                      <ul>
+                        <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
+                        <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
+                        <li><a href="/destinations/sub_overseas/america.html">Châu Mỹ</a></li>
+                      </ul>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li><a href="/contact.html">Liên hệ</a></li>
+            <li><a href="/news.html">Tin tức</a></li>
+          </ul>
         </nav>
-    </header>
+      </header>
     <nav class="breadcrumb">
         <ul>
             <li><a href="/index.html">Trang chủ</a></li>
             <li><a href="/des-domestic.html">Tour Việt Nam</a></li>
-            <li><a href="/mienbac.html">Miền Bắc</a></li>
+            <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
             <li>Chi tiết</li>
         </ul>
     </nav>
@@ -62,7 +78,7 @@
             <h2 id="tour-name">Vịnh Hạ Long</h2>
             <div class="slideshow-container">
                 <div class="slide fade">
-                    <img src="/img/info/des_banner/halong.png" alt="Vịnh Hạ Long" style="width:100%">
+                    <img src="/img/info/des_banner/halong.jpg" alt="Vịnh Hạ Long" style="width:100%">
                 </div>
                 <div class="slide fade">
                     <img src="/img/info/halong2.jpg" alt="Vịnh Hạ Long" style="width:100%">
@@ -212,23 +228,23 @@
         <p>Khám phá những điểm đến tuyệt vời và trải nghiệm những chuyến đi đáng nhớ với ChipTrip!</p>
         <div class="destinations-content">
             <div class="destination-info">
-                <img src="/img/destinations/sapa.jpg" alt="Sapa">
+                <img src="/img/info/des_banner/tokyo.jpg" alt="Vịnh Tokyo">
                 <div class="title">
-                    <h2>Sapa - Fansipan</h2>
+                    <h2>Tokyo - Cổ xưa và hiện đại</h2>
                 </div>
                 <div>
                     <p>Khởi hành: Hà Nội</p>
                 </div>
                 <div class="price">
                     <p>Giá từ:</p>
-                    <span>3.990.000đ</span>
+                    <span>25.000.000đ</span>
                 </div>
-                <a href="#" class="book-btn">Đặt tour</a>
+                <a href="/destinations/oversea/toyko.html" class="book-btn">Đặt tour</a>
             </div>
             <div class="destination-info">
-                <img src="/img/destinations/dalat.jpg" alt="Đà Lạt">
+                <img src="/img/destinations/halong.jpg" alt="Vịnh Hạ Long">
                 <div class="title">
-                    <h2>Đà Lạt 3 ngày 2 đêm</h2>
+                    <h2>Vịnh Hạ Long</h2>
                 </div>
                 <div>
                     <p>Khởi hành: Hà Nội</p>
@@ -237,21 +253,21 @@
                     <p>Giá từ:</p>
                     <span>4.500.000đ</span>
                 </div>
-                <a href="#" class="book-btn">Đặt tour</a>
+                <a href="/destinations/domestic/vinh_ha_long.html" class="book-btn">Đặt tour</a>
             </div>
             <div class="destination-info">
-                <img src="/img/destinations/hagiang.jpg" alt="Hà Giang">
+                <img src="/img/info/des_banner/paris.jpg" alt="Tour Paris">
                 <div class="title">
-                    <h2>Hà Giang - Lũng Cú - Đồng Văn</h2>
+                    <h2>Paris - Kinh đô ánh sáng</h2>
                 </div>
                 <div>
                     <p>Khởi hành: Hà Nội</p>
                 </div>
                 <div class="price">
                     <p>Giá từ:</p>
-                    <span>3.990.000đ</span>
+                    <span>45.000.000đ</span>
                 </div>
-                <a href="#" class="book-btn">Đặt tour</a>
+                <a href="/destinations/oversea/paris.html" class="book-btn">Đặt tour</a>
             </div>
         </div>
     </section>
