--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="destination-info">
                 <img src="img/info/des_banner/tokyo.jpg" alt="Vịnh Tokyo">
                 <div class="title">
-                    <h2>Tokyo - Thành phố giao thoa giữa cổ xưa và hiện đại</h2>
+                    <h2>Tokyo - Cổ xưa và hiện đại</h2>
                 </div>
                 <div>
                     <p>Khởi hành: Hà Nội</p>
@@ -126,7 +126,7 @@
                     <p>Giá từ:</p>
                     <span>4.500.000đ</span>
                 </div>
-                <a href="#" class="book-btn">Đặt tour</a>
+                <a href="destinations/domestic/vinh_ha_long.html" class="book-btn">Đặt tour</a>
             </div>
             <div class="destination-info">
                 <img src="img/info/des_banner/paris.jpg" alt="Tour Paris">
