--- a/destinations/domestic/hagiang-lungcu-dongvan.html
+++ b/destinations/domestic/hagiang-lungcu-dongvan.html
@@ -3,77 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="57x57" href="./icon//apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="./icon//apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="./icon//apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="./icon//apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="./icon//apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="./icon//apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="./icon//apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="./icon//apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./icon//apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="./icon//android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./icon//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./icon//favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./icon//favicon-16x16.png">
-    <link rel="manifest" href="./icon//manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="/icon//apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/icon//apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/icon//apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/icon//apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/icon//apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/icon//apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/icon//apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/icon//apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/icon//apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/icon//android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/icon//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/icon//favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon//favicon-16x16.png">
+    <link rel="manifest" href="/icon//manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="./icon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <title>Hà Giang - Lũng Cú - Đồng Văn</title>
     <link rel="stylesheet" href="/css/info.css">
     <link rel="stylesheet" href="/css/responsive.css">
-    <title>Chi tiết</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <style>
     
 </style>
 <body>
     <header>
-        <!--Navigation bar-->
-        <div>
-            <img class="logo" src="/img/logo.svg" alt="logo">
-        </div>
+        <div><img class="logo" src="/img/logo.svg" alt="logo" /></div>
         <div class="menu-toggle" id="menu-toggle">
-            <i class="fa fa-bars"></i>
-          </div>
+          <i class="fa fa-bars"></i>
+        </div>
         <nav id="navbar">
-            <ul class = "nav_links">
-                <li><a href="/destination.html">Điểm đến</a>
-                    <div class="sub_menu">
-                        <ul>
-                            <li><a href="/des-domestic.html">Du lịch trong nước</a>
-                                <div class="sub_menu_2">
-                                    <ul>
-                                        <li><a href="/mienbac.html">Miền Bắc</a></li>
-                                        <li><a href="/mientrung.html">Miền Trung</a></li>
-                                        <li><a href="/miennam.html">Miền Nam</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                            <li><a href="/des-oversea.html">Du lịch nước ngoài</a>
-                                <div class="sub_menu_2">
-                                    <ul>
-                                        <li><a href="/asian.html">Châu Á</a></li>
-                                        <li><a href="/europe.html">Châu Âu</a></li>
-                                        <li><a href="/america.html">Châu Mỹ</a></li>
-                                    </ul>
-                                </div>
-                            </li>
-                        </ul>
+          <ul class="nav_links">
+            <li><a href="/about.html">Giới thiệu</a></li>
+            <li>
+              <a href="/destination.html">Điểm đến</a>
+              <div class="sub_menu">
+                <ul>
+                  <li><a href="/des-domestic.html">Du lịch trong nước</a>
+                    <div class="sub_menu_2">
+                      <ul>
+                        <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+                        <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+                        <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
+                      </ul>
                     </div>
-                </li>
-                <li><a href="/about.html">Giới thiệu</a></li>
-                <li><a href="/contact.html">Liên hệ</a></li>
-                <li><a href="/news.html">Tin tức</a></li>
-            </ul>
+                  </li>
+                  <li><a href="/des-oversea.html">Du lịch nước ngoài</a>
+                    <div class="sub_menu_2">
+                      <ul>
+                        <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
+                        <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
+                        <li><a href="/destinations/sub_overseas/america.html">Châu Mỹ</a></li>
+                      </ul>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li><a href="/contact.html">Liên hệ</a></li>
+            <li><a href="/news.html">Tin tức</a></li>
+          </ul>
         </nav>
-    </header>
+      </header>
     <nav class="breadcrumb">
         <ul>
             <li><a href="/index.html">Trang chủ</a></li>
             <li><a href="/des-domestic.html">Tour Việt Nam</a></li>
-            <li><a href="/mienbac.html">Miền Bắc</a></li>
+            <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
             <li>Chi tiết</li>
         </ul>
     </nav>
@@ -242,32 +240,18 @@
         <p>Khám phá những điểm đến tuyệt vời và trải nghiệm những chuyến đi đáng nhớ với ChipTrip!</p>
         <div class="destinations-content">
             <div class="destination-info">
-                <img src="/img/destinations/halong.jpg" alt="Vịnh Hạ Long">
+                <img src="/img/info/des_banner/tokyo.jpg" alt="Vịnh Tokyo">
                 <div class="title">
-                    <h2>Vịnh Hạ Long</h2>
+                    <h2>Tokyo - Cổ xưa và hiện đại</h2>
                 </div>
                 <div>
                     <p>Khởi hành: Hà Nội</p>
                 </div>
                 <div class="price">
                     <p>Giá từ:</p>
-                    <span>4.500.000đ</span>
+                    <span>25.000.000đ</span>
                 </div>
-                <a href="#" class="book-btn">Đặt tour</a>
-            </div>
-            <div class="destination-info">
-                <img src="/img/destinations/halong.jpg" alt="Vịnh Hạ Long">
-                <div class="title">
-                    <h2>Đà Lạt 3 ngày 2 đêm</h2>
-                </div>
-                <div>
-                    <p>Khởi hành: Hà Nội</p>
-                </div>
-                <div class="price">
-                    <p>Giá từ:</p>
-                    <span>4.500.000đ</span>
-                </div>
-                <a href="#" class="book-btn">Đặt tour</a>
+                <a href="/destinations/oversea/toyko.html" class="book-btn">Đặt tour</a>
             </div>
             <div class="destination-info">
                 <img src="/img/destinations/halong.jpg" alt="Vịnh Hạ Long">
@@ -281,7 +265,21 @@
                     <p>Giá từ:</p>
                     <span>4.500.000đ</span>
                 </div>
-                <a href="#" class="book-btn">Đặt tour</a>
+                <a href="/destinations/domestic/vinh_ha_long.html" class="book-btn">Đặt tour</a>
+            </div>
+            <div class="destination-info">
+                <img src="/img/info/des_banner/paris.jpg" alt="Tour Paris">
+                <div class="title">
+                    <h2>Paris - Kinh đô ánh sáng</h2>
+                </div>
+                <div>
+                    <p>Khởi hành: Hà Nội</p>
+                </div>
+                <div class="price">
+                    <p>Giá từ:</p>
+                    <span>45.000.000đ</span>
+                </div>
+                <a href="/destinations/oversea/paris.html" class="book-btn">Đặt tour</a>
             </div>
         </div>
     </section>
