fixing the navigation bar

--- a/checkout.html
+++ b/checkout.html
@@ -26,41 +26,44 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
 </head>
 <body>
-    <header>
-        <div><img class="logo" src="img/logo.svg" alt="logo" /></div>
-        <nav id="navbar">
-          <ul class="nav_links">
-            <li><a href="./about.html">Giới thiệu</a></li>
-            <li>
-              <a href="/destination.html">Điểm đến</a>
-              <div class="sub_menu">
-                <ul>
-                  <li><a href="/des-domestic.html">Du lịch trong nước</a>
-                    <div class="sub_menu_2">
-                      <ul>
-                        <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
-                        <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
-                        <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
-                      </ul>
-                    </div>
-                  </li>
-                  <li><a href="des-oversea.html">Du lịch nước ngoài</a>
-                    <div class="sub_menu_2">
-                      <ul>
-                        <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
-                        <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
-                        <li><a href="/destinations/sub_overseas/america.html">Châu Mỹ</a></li>
-                      </ul>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </li>
-            <li><a href="contact.html">Liên hệ</a></li>
-            <li><a href="news.html">Tin tức</a></li>
-          </ul>
-        </nav>
-      </header>
+  <header>
+    <div><img class="logo" src="img/logo.svg" alt="logo" /></div>
+    <div class="menu-toggle" id="menu-toggle">
+        <i class="fa fa-bars"></i>
+      </div>
+    <nav id="navbar">
+      <ul class="nav_links">
+        <li><a href="./about.html">Giới thiệu</a></li>
+        <li>
+          <a href="/destination.html">Điểm đến</a>
+          <div class="sub_menu">
+            <ul>
+              <li><a href="/des-domestic.html">Du lịch trong nước</a>
+                <div class="sub_menu_2">
+                  <ul>
+                    <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+                    <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+                    <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
+                  </ul>
+                </div>
+              </li>
+              <li><a href="des-oversea.html">Du lịch nước ngoài</a>
+                <div class="sub_menu_2">
+                  <ul>
+                    <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
+                    <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
+                    <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
+                  </ul>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </li>
+        <li><a href="contact.html">Liên hệ</a></li>
+        <li><a href="news.html">Tin tức</a></li>
+      </ul>
+    </nav>
+  </header>
     <section class="checkout-container">
         <div class="contact-info">
             <h2>Điền thông tin liên hệ</h2>
