--- a/des-oversea.html
+++ b/des-oversea.html
@@ -53,7 +53,7 @@
                   <ul>
                     <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
                     <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
-                    <li><a href="/destinations/sub_overseas/america.html">Châu Mỹ</a></li>
+                    <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
                   </ul>
                 </div>
               </li>
@@ -157,7 +157,7 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">25.000.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
+                    <button><a href="destinations/oversea/tokyo.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiêu chuẩn</div>
@@ -171,11 +171,11 @@
                     <div class="tour-details">
                       <div class="detail-item">
                         <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: EURO-PARIS-002</span>
+                        <span>Mã tour: EURO-PARIS-001</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-clock"></i></span>
-                        <span>Thời gian: 7N6D</span>
+                        <span>Thời gian: 5N4D</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-location-dot"></i></span>
@@ -196,7 +196,7 @@
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
                     <div class="price">45.000.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
+                    <button><a href="destinations/oversea/paris.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Cao cấp</div>
@@ -210,15 +210,15 @@
                     <div class="tour-details">
                       <div class="detail-item">
                         <span><i class="fa-solid fa-ticket"></i></span>
-                        <span>Mã tour: AMERICA-NY-003</span>
+                        <span>Mã tour: AMER-NY-001</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-clock"></i></span>
-                        <span>Thời gian: 6N5D</span>
+                        <span>Thời gian: 8N7D</span>
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-location-dot"></i></span>
-                        <span>Khởi hành: Đà Nẵng</span>
+                        <span>Khởi hành: Hà Nội</span>
                       </div>
                     </div>
                     <div class="tour-dates">
@@ -234,8 +234,8 @@
                   </div>
                   <div style="text-align: left;">Giá từ:</div>
                   <div class="tour-meta">
-                    <div class="price">60.000.000 <span>đ</span></div>
-                    <button><a href="#">Xem chi tiết</a></button>
+                    <div class="price">65.000.000 <span>đ</span></div>
+                    <button><a href="destinations/oversea/newyork.html">Xem chi tiết</a></button>
                   </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Cao cấp</div>
@@ -273,7 +273,7 @@
                     <div style="text-align: left;">Giá từ:</div>
                     <div class="tour-meta">
                         <div class="price">18.000.000 <span>đ</span></div>
-                        <button><a href="#">Xem chi tiết</a></button>
+                        <button><a href="destinations/oversea/seoul.html">Xem chi tiết</a></button>
                     </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiêu chuẩn</div>
@@ -312,7 +312,7 @@
                     <div style="text-align: left;">Giá từ:</div>
                     <div class="tour-meta">
                         <div class="price">50.000.000 <span>đ</span></div>
-                        <button><a href="#">Xem chi tiết</a></button>
+                        <button><a href="destinations/oversea/rome.html">Xem chi tiết</a></button>
                     </div>
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Cao cấp</div>
@@ -335,7 +335,7 @@
                             </div>
                             <div class="detail-item">
                                 <span><i class="fa-solid fa-location-dot"></i></span>
-                                <span>Khởi hành: Đà Nẵng</span>
+                                <span>Khởi hành: Hà Nội</span>
                             </div>
                         </div>
                         <div class="tour-dates">
