fixing the navigation bar (again)

--- a/destinations/domestic/cao_bang_thac_ban_gioc_be_be.html
+++ b/destinations/domestic/cao_bang_thac_ban_gioc_be_be.html
@@ -305,14 +305,13 @@
             <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</li></a>
             <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</li></a>
           </ul>
-          <strong><a href="/des-overseas.html">Du lịch nước ngoài</a></strong>
+          <strong><a href="/des-oversea.html">Du lịch nước ngoài</a></strong>
           <ul>
             <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</li></a>
-            <li><a href="/destinations/sub_overseas/asia.html">Châu Á</li></a>
+            <li><a href="/destinations/sub_overseas/asian.html">Châu Á</li></a>
             <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</li></a>
           </ul>
         </div>
-    
         <div class="footer-section">
           <h4>Đăng ký để nhận tin từ chúng tôi:</h4>
           <div class="subscribe-box">
