--- a/destinations/oversea/seoul.html
+++ b/destinations/oversea/seoul.html
@@ -52,7 +52,7 @@
                       <ul>
                         <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
                         <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
-                        <li><a href="/destinations/sub_overseas/america.html">Châu Mỹ</a></li>
+                        <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
                       </ul>
                     </div>
                   </li>
@@ -68,7 +68,7 @@
         <ul>
             <li><a href="/index.html">Trang chủ</a></li>
             <li><a href="/destination.html">Tour Quốc tế</a></li>
-            <li><a href="/destinations/sub_overseas/asia.html">Châu Á</a></li>
+            <li><a href="/destinations/sub_oversea/asian.html">Châu Á</a></li>
             <li>Chi tiết</li>
         </ul>
     </nav>
@@ -322,10 +322,10 @@
             <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
             <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
           </ul>
-          <strong><a href="/des-overseas.html">Du lịch nước ngoài</a></strong>
+          <strong><a href="/des-oversea.html">Du lịch nước ngoài</a></strong>
           <ul>
             <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
-            <li><a href="/destinations/sub_overseas/asia.html">Châu Á</a></li>
+            <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
             <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
           </ul>
         </div>
