--- a/des-oversea.html
+++ b/des-oversea.html
@@ -373,7 +373,7 @@
                             </div>
                             <div class="detail-item">
                                 <span><i class="fa-solid fa-location-dot"></i></span>
-                                <span>Khởi hành: TP. HCM</span>
+                                <span>Khởi hành: Hà Nối</span>
                             </div>
                         </div>
                         <div class="tour-dates">
