--- a/destinations/domestic/vinh_ha_long.html
+++ b/destinations/domestic/vinh_ha_long.html
@@ -274,60 +274,60 @@
     <div class="footer-container"></div>
     <footer class="footer">
         <div class="footer-section">
-            <h4>Liên hệ</h4>
-            <p>235 Hoàng Quốc Việt, Cổ Nhuế, Bắc Từ Liêm, Hà Nội</p>
-            <p>Từ 7:00 - 17:30 hằng ngày</p>
-            <p>Từ 7:00 - 15:00 Chủ Nhật</p>
-            <hr style="width: 80%; margin: 10px 0;" />
-            <p>Hỗ trợ khách hàng qua hotline 24/7</p>
-            <p>(+84) 034 958 0476</p>
-            <p>(+84) 034 958 0416</p>
-            <div class="social-icons">
-                <img src="/img/footer/social/face.svg" />
-                <img src="/img/footer/social/ins.svg" />
-                <img src="/img/footer/social/messenger.svg" />
-                <img src="/img/footer/social/tiktok.svg" />
-            </div>
+          <h4>Liên hệ</h4>
+          <p>235 Hoàng Quốc Việt, Cổ Nhuế, Bắc Từ Liêm, Hà Nội</p>
+          <p>Từ 7:00 - 17:30 hằng ngày</p>
+          <p>Từ 7:00 - 15:00 Chủ Nhật</p>
+          <hr style="width: 80%; margin: 10px 0;" />
+          <p>Hỗ trợ khách hàng qua hotline 24/7</p>
+          <p>(+84) 034 958 0476</p>
+          <p>(+84) 034 958 0416</p>
+          <div class="social-icons">
+            <img src="/img/footer/social/face.svg" />
+            <img src="/img/footer/social/ins.svg" />
+            <img src="/img/footer/social/messenger.svg" />
+            <img src="/img/footer/social/tiktok.svg" />
+          </div>
         </div>
         <div class="footer-section">
-            <h4>Thông tin</h4>
-            <ul>
-                <li><a href="/about.html" target="_blank">Giới thiệu</a></li>
-                <li><a href="/news.html" target="_blank">Tin tức</a></li>
-                <li><a href="/contact.html" target="_blank">Liên Hệ</a></li>
-            </ul>
+          <h4>Thông tin</h4>
+          <ul>
+            <li><a href="/about.html" target="_blank">Giới thiệu</li></a>
+            <li><a href="/news.html" target="_blank">Tin tức</li></a>
+            <li><a href="/contact.html" target="_blank">Liên Hệ</li></a>
+          </ul>
         </div>
         <div class="footer-section">
-            <h4>Dịch vụ</h4>
-            <strong><a href="/des-domestic.html">Du lịch trong nước</a></strong>
-            <ul>
-                <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
-                <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
-                <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
-            </ul>
-            <strong><a href="/des-overseas.html">Du lịch nước ngoài</a></strong>
-            <ul>
-                <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
-                <li><a href="/destinations/sub_overseas/asia.html">Châu Á</a></li>
-                <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
-            </ul>
+          <h4>Dịch vụ</h4>
+          <strong><a href="/des-domestic.html">Du lịch trong nước</a></strong>
+          <ul>
+            <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</li></a>
+            <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</li></a>
+            <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</li></a>
+          </ul>
+          <strong><a href="/des-oversea.html">Du lịch nước ngoài</a></strong>
+          <ul>
+            <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</li></a>
+            <li><a href="/destinations/sub_overseas/asian.html">Châu Á</li></a>
+            <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</li></a>
+          </ul>
         </div>
         <div class="footer-section">
-            <h4>Đăng ký để nhận tin từ chúng tôi:</h4>
-            <div class="subscribe-box">
-                <input id="email-input" type="email" placeholder="Your email" />
-                <button id="submit-button" style="background: none; border: none; padding: 0;">
-                    <img src="/img/footer/send.svg" alt="Gửi" style="width: 24px; height: 24px;">
-                </button>
-            </div>
-            <div id="message" style="margin-top: 8px; font-size: 14px;"></div>
-            <script src="/js/footer.js"></script>
-            <h4>Chấp nhận thanh toán</h4>
-            <div class="payment-icons">
-                <img src="/img/footer/icon.png" />
-            </div>
+          <h4>Đăng ký để nhận tin từ chúng tôi:</h4>
+          <div class="subscribe-box">
+            <input id="email-input" type="email" placeholder="Your email" />
+            <button id="submit-button" style="background: none; border: none; padding: 0;">
+              <img src="/img/footer/send.svg" alt="Gửi" style="width: 24px; height: 24px;">
+            </button>
+          </div>
+          <div id="message" style="margin-top: 8px; font-size: 14px;"></div>
+          <script src="/js/footer.js"></script>
+          <h4>Chấp nhận thanh toán</h4>
+          <div class="payment-icons">
+            <img src="/img/footer/icon.png" />
+          </div>
         </div>
-    </footer>
+      </footer>
     <script src="/js/script.js"></script>
     <script src="/js/responsive.js"></script>
 </body>
