--- a/destinations/oversea/tokyo.html
+++ b/destinations/oversea/tokyo.html
@@ -52,7 +52,7 @@
                       <ul>
                         <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
                         <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
-                        <li><a href="/destinations/sub_overseas/america.html">Châu Mỹ</a></li>
+                        <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
                       </ul>
                     </div>
                   </li>
@@ -334,7 +334,7 @@
             <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</li></a>
             <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</li></a>
           </ul>
-          <strong><a href="/des-overseas.html">Du lịch nước ngoài</a></strong>
+          <strong><a href="/des-oversea.html">Du lịch nước ngoài</a></strong>
           <ul>
             <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</li></a>
             <li><a href="/destinations/sub_overseas/asia.html">Châu Á</li></a>
