add more information

--- a/des-oversea.html
+++ b/des-oversea.html
@@ -140,7 +140,7 @@
                       </div>
                       <div class="detail-item">
                         <span><i class="fa-solid fa-location-dot"></i></span>
-                        <span>Khởi hành: TP. HCM</span>
+                        <span>Khởi hành: Hà Nội</span>
                       </div>
                     </div>
                     <div class="tour-dates">
@@ -257,7 +257,7 @@
                             </div>
                             <div class="detail-item">
                                 <span><i class="fa-solid fa-location-dot"></i></span>
-                                <span>Khởi hành: TP. HCM</span>
+                                <span>Khởi hành: Hà Nội</span>
                             </div>
                         </div>
                         <div class="tour-dates">
@@ -373,7 +373,7 @@
                             </div>
                             <div class="detail-item">
                                 <span><i class="fa-solid fa-location-dot"></i></span>
-                                <span>Khởi hành: Hà Nối</span>
+                                <span>Khởi hành: Hà Nội</span>
                             </div>
                         </div>
                         <div class="tour-dates">
@@ -451,7 +451,7 @@
                             </div>
                             <div class="detail-item">
                                 <span><i class="fa-solid fa-location-dot"></i></span>
-                                <span>Khởi hành: Đà Nẵng</span>
+                                <span>Khởi hành: Hà Nội</span>
                             </div>
                         </div>
                         <div class="tour-dates">
@@ -490,7 +490,7 @@
                             </div>
                             <div class="detail-item">
                                 <span><i class="fa-solid fa-location-dot"></i></span>
-                                <span>Khởi hành: TP. HCM</span>
+                                <span>Khởi hành: Hà Nội</span>
                             </div>
                         </div>
                         <div class="tour-dates">
