--- a/destinations/oversea/seoul.html
+++ b/destinations/oversea/seoul.html
@@ -67,7 +67,7 @@
     <nav class="breadcrumb">
         <ul>
             <li><a href="/index.html">Trang chủ</a></li>
-            <li><a href="/destination.html">Tour Quốc tế</a></li>
+            <li><a href="/des-oversea.html">Tour Quốc tế</a></li>
             <li><a href="/destinations/sub_oversea/asian.html">Châu Á</a></li>
             <li>Chi tiết</li>
         </ul>
@@ -329,7 +329,6 @@
             <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
           </ul>
         </div>
-    
         <div class="footer-section">
           <h4>Đăng ký để nhận tin từ chúng tôi:</h4>
           <div class="subscribe-box">
