--- a/destinations/oversea/bangkok.html
+++ b/destinations/oversea/bangkok.html
@@ -64,11 +64,11 @@
           </ul>
         </nav>
       </header>
-    <nav class="breadcrumb">
+      <nav class="breadcrumb">
         <ul>
             <li><a href="/index.html">Trang chủ</a></li>
-            <li><a href="/destination.html">Tour Quốc tế</a></li>
-            <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
+            <li><a href="/des-oversea.html">Tour Quốc tế</a></li>
+            <li><a href="/destinations/sub_oversea/asian.html">Châu Á</a></li>
             <li>Chi tiết</li>
         </ul>
     </nav>
@@ -322,14 +322,13 @@
             <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
             <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
           </ul>
-          <strong><a href="/des-overseas.html">Du lịch nước ngoài</a></strong>
+          <strong><a href="/des-oversea.html">Du lịch nước ngoài</a></strong>
           <ul>
             <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
             <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
             <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
           </ul>
         </div>
-    
         <div class="footer-section">
           <h4>Đăng ký để nhận tin từ chúng tôi:</h4>
           <div class="subscribe-box">
