--- a/destinations/oversea/tokyo.html
+++ b/destinations/oversea/tokyo.html
@@ -64,11 +64,11 @@
           </ul>
         </nav>
       </header>
-    <nav class="breadcrumb">
+      <nav class="breadcrumb">
         <ul>
             <li><a href="/index.html">Trang chủ</a></li>
-            <li><a href="/destination.html">Tour Việt Nam</a></li>
-            <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
+            <li><a href="/des-oversea.html">Tour Quốc tế</a></li>
+            <li><a href="/destinations/sub_oversea/asian.html">Châu Á</a></li>
             <li>Chi tiết</li>
         </ul>
     </nav>
@@ -330,18 +330,17 @@
           <h4>Dịch vụ</h4>
           <strong><a href="/des-domestic.html">Du lịch trong nước</a></strong>
           <ul>
-            <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</li></a>
-            <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</li></a>
-            <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</li></a>
+            <li><a href="/destinations/sub_domestic/mienbac.html">Miền Bắc</a></li>
+            <li><a href="/destinations/sub_domestic/mientrung.html">Miền Trung</a></li>
+            <li><a href="/destinations/sub_domestic/miennam.html">Miền Nam</a></li>
           </ul>
           <strong><a href="/des-oversea.html">Du lịch nước ngoài</a></strong>
           <ul>
-            <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</li></a>
-            <li><a href="/destinations/sub_overseas/asia.html">Châu Á</li></a>
-            <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</li></a>
+            <li><a href="/destinations/sub_overseas/europe.html">Châu Âu</a></li>
+            <li><a href="/destinations/sub_overseas/asian.html">Châu Á</a></li>
+            <li><a href="/destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
           </ul>
         </div>
-    
         <div class="footer-section">
           <h4>Đăng ký để nhận tin từ chúng tôi:</h4>
           <div class="subscribe-box">
